--- a/_posts/2017-05-28-welcome.md
+++ b/_posts/2017-05-28-welcome.md
@@ -1,6 +1,7 @@
 ---
-layout: post
+layout: svenska
 title:  "Welcome to the website!"
+subtitle: "Foo... bar... baz."
 date:   2017-05-28 13:31:00 +0100
 categories: updates
 ---
