Fix things, I think?

--- a/_posts/2017-05-28-welcome.md
+++ b/_posts/2017-05-28-welcome.md
@@ -4,6 +4,7 @@ title: "Welcome to the website!"
 subtitle: "Foo... bar... baz."
 date: 2017-05-28 13:31:00 +0000
 categories: updates
+permalink: /:year-:month-:day-:title.html
 ---
 
 Welcome to the website!
